--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.5",
     "react-icons": "^4.7.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
